# gazeta

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.txt
.github/workflows/: cmake-multi-platform.yml  msvc.yml
common/: CMakeLists.txt
common/include/common/: article.h  common.hpp  migration.h  pch.h  setting.h  source.h  source_type.h
common/src/: article.cpp
common/tests/: CMakeLists.txt
common/tests/src/: article.cc  pch_tests.h
gui/android/: AndroidManifest.xml  build.gradle
gui/gtk/: CMakeLists.txt
gui/gtk/src/: hare_gtk.cpp  hare_gtk.h  helloworld.cc  helloworld.h  main.cpp  main_window.cpp  main_window.h  pch.h
gui/gtk/src/infobook/: article_object.cpp  article_object.h  infobook_object.cpp  infobook_object.h  infobook_page_object.cpp  infobook_page_object.h
gui/qt/: CMakeLists.txt
gui/qt/src/: main.cpp
info_controller/: CMakeLists.txt
info_controller/example/: CMakeLists.txt
info_controller/example/src/: hare_gazeta_example.cpp  hare_gazeta_example.h  main.cpp  pch.h
info_controller/include/info_controller/: article.h  controller_types.h  hare_gazeta_ic.h  info_controller.h  source.h
info_controller/src/: article.cpp  hare_gazeta.cpp  hare_gazeta.h  hare_gazeta_ic.cpp  info_controller.cpp  pch.h
info_controller/src/controllers/: base_controller.cpp  base_controller.h  controller_ria.cpp  controller_ria.h  fabric.cpp  fabric.h
info_controller/src/info_sources/: reader.cpp  reader.h  telegram_web.cpp  telegram_web.h
info_controller/tests/: CMakeLists.txt
info_controller/tests/src/: article.cc  pch_tests.h  reader.cc  telegram_web.cc  telegram_web_utils.cpp  telegram_web_utils.h
src/: hare_gazeta.cpp  hare_gazeta.h  main.cpp  pch.h
src/info_sources/: article.cpp  article.h  reader.cpp  reader.h  source.h  telegram_web.cpp  telegram_web.h
storage/: CMakeLists.txt
storage/example/: CMakeLists.txt
storage/example/src/: hare_storage_example.cpp  hare_storage_example.h  main.cpp  pch.h
storage/include/storage/: db_manager.h  hare_storage.h  types.h
storage/sql/: create_db.sql
storage/sql/sqlite/: create_db.sql
storage/src/: db_manager.cpp  hare_storage.cpp  pch.h
storage/src/db/: fabric.cpp  fabric.h  manager_base.cpp  manager_base.h
storage/src/db/sqlite/: manager.cpp  manager.h  manager.hpp
storage/tests/: CMakeLists.txt
storage/tests/src/: pch_tests.h  reader.cc
